--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@electron-toolkit/preload": "^2.0.0",
     "@electron-toolkit/utils": "^2.0.0",
+    "clsx": "^2.0.0",
     "electron-updater": "^6.1.1"
   },
   "devDependencies": {
